# slick_shm

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: slick-shm-config.cmake.in  slick_shm-config.cmake.in
docs/: api_reference.md  examples.md  platform_notes.md
examples/: CMakeLists.txt  advanced_sync.cpp  basic_reader.cpp  basic_writer.cpp
include/slick/: shm.hpp
include/slick/shm/: error.hpp  shared_memory.hpp  shared_memory_view.hpp  types.hpp
include/slick/shm/detail/: platform.hpp
include/slick/shm/detail/posix/: shared_memory_impl.hpp
include/slick/shm/detail/windows/: shared_memory_impl.hpp
tests/: CMakeLists.txt  test_create_open.cpp  test_cross_process.cpp  test_error_handling.cpp  test_is_creator.cpp  test_main.cpp  test_move_semantics.cpp  test_process_reader.cpp  test_process_writer.cpp
